--- a/src/app/shared/components/product/product-row/product-row.component.html
+++ b/src/app/shared/components/product/product-row/product-row.component.html
@@ -90,7 +90,7 @@
             ></ish-product-variation-display>
           </ng-container>
           <ng-template #normalVariationDisplay>
-            <ng-container *ngIf="isVariationProduct(product) && variationOptions">
+            <ng-container *ngIf="isVariationProduct(product)">
               <ng-container *ngIf="configuration.readOnly; else variationSelect">
                 <ish-product-variation-display [product]="product"></ish-product-variation-display>
               </ng-container>
@@ -99,10 +99,7 @@
         </div>
 
         <ng-template #variationSelect>
-          <ish-product-variation-select
-            [variationOptions]="variationOptions"
-            (selectVariation)="variationSelected($event)"
-          ></ish-product-variation-select>
+          <ish-product-variation-select></ish-product-variation-select>
         </ng-template>
 
         <div class="product-list-actions-container">
