--- a/src/app/shared/components/product/product-tile/product-tile.component.html
+++ b/src/app/shared/components/product/product-tile/product-tile.component.html
@@ -41,7 +41,7 @@
       </ng-container>
     </ng-container>
     <ng-template #normalVariationDisplay>
-      <ng-container *ngIf="isVariationProduct(product) && variationOptions">
+      <ng-container *ngIf="isVariationProduct(product)">
         <ng-container *ngIf="configuration.readOnly; else variationSelect">
           <ish-product-variation-display [product]="product"></ish-product-variation-display>
         </ng-container>
@@ -50,10 +50,7 @@
   </div>
 
   <ng-template #variationSelect>
-    <ish-product-variation-select
-      [variationOptions]="variationOptions"
-      (selectVariation)="variationSelected($event)"
-    ></ish-product-variation-select>
+    <ish-product-variation-select></ish-product-variation-select>
   </ng-template>
 
   <div class="product-tile-actions btn-group">
