fix: e2e fixes pt 3

--- a/src/app/extensions/quoting/shared/quote-widget/quote-widget.component.html
+++ b/src/app/extensions/quoting/shared/quote-widget/quote-widget.component.html
@@ -22,7 +22,7 @@
 
       <div class="row">
         <div class="col my-2">
-          <a routerLink="/account/quotes">
+          <a routerLink="/account/quotes" data-testing-id="quote-list-link">
             {{ 'account.quotes.widget.view_all_quotes.link' | translate }}
           </a>
         </div>
