--wip-- [skip ci]

--- a/src/app/extensions/order-templates/pages/account-order-template-detail/account-order-template-detail-page.component.html
+++ b/src/app/extensions/order-templates/pages/account-order-template-detail/account-order-template-detail-page.component.html
@@ -40,12 +40,12 @@
       </div>
     </ng-container>
   </div>
-  <ish-product-add-to-basket
+  <!-- <ish-product-add-to-basket
     [product]="dummyProduct"
     [disabled]="!selectedItems?.length"
     [class]="'btn btn-primary float-right'"
     (productToBasket)="addSelectedItemsToCart(orderTemplate)"
-  ></ish-product-add-to-basket>
+  ></ish-product-add-to-basket> -->
 
   <ng-template #noItems>
     <p>{{ 'account.order_template.no_entries' | translate }}</p>
