--- a/src/app/pages/product/product-bundle-parts/product-bundle-parts.component.html
+++ b/src/app/pages/product/product-bundle-parts/product-bundle-parts.component.html
@@ -26,10 +26,7 @@
   </div>
   <div class="row product-info">
     <div class="col align-self-start no-gutters">
-      <ish-product-add-to-basket
-        [product]="product"
-        (productToBasket)="productToBasket.emit()"
-      ></ish-product-add-to-basket>
+      <ish-product-add-to-basket></ish-product-add-to-basket>
     </div>
   </div>
 </div>
