--- a/src/app/shared/components/product/product-row/product-row.component.html
+++ b/src/app/shared/components/product/product-row/product-row.component.html
@@ -1,4 +1,4 @@
-<div class="product-tile-list row" [attr.data-testing-sku]="product.sku">
+<div *ngIf="product$ | async as product" class="product-tile-list row" [attr.data-testing-sku]="product.sku">
   <div class="col-3 col-md-2">
     <div class="product-image-container">
       <a [routerLink]="product | ishProductRoute: category">
@@ -113,7 +113,7 @@
 
           <ng-template #standardInteractions>
             <ng-container *ngIf="!isMasterProduct(product); else masterProductActions">
-              <form [formGroup]="productItemForm" class="product-form form-horizontal row">
+              <!-- <form [formGroup]="productItemForm" class="product-form form-horizontal row">
                 <div
                   class="action-container"
                   [ngClass]="
@@ -141,7 +141,7 @@
                     (productToBasket)="addToBasket()"
                   ></ish-product-add-to-basket>
                 </div>
-              </form>
+              </form> -->
             </ng-container>
 
             <ng-template #masterProductActions>
