--- a/src/app/extensions/order-templates/pages/account-order-template-detail/account-order-template-detail-line-item/account-order-template-detail-line-item.component.html
+++ b/src/app/extensions/order-templates/pages/account-order-template-detail/account-order-template-detail-line-item/account-order-template-detail-line-item.component.html
@@ -41,15 +41,7 @@
         </div>
       </div>
       <div class="col-6 col-md-3 p-md-0 text-right">
-        <form [formGroup]="addToCartForm">
-          <ish-product-quantity
-            [allowZeroQuantity]="false"
-            [quantityLabel]="''"
-            [product]="product"
-            [parentForm]="addToCartForm"
-            controlName="quantity"
-          ></ish-product-quantity>
-        </form>
+        <ish-product-quantity></ish-product-quantity>
       </div>
     </div>
     <div class="col-2 list-item d-none d-md-block text-right">
