--- a/src/app/pages/compare/product-compare-list/product-compare-list.component.html
+++ b/src/app/pages/compare/product-compare-list/product-compare-list.component.html
@@ -12,38 +12,8 @@
         <tbody>
           <tr>
             <th class="legacy-col-6 legacy-col-md-3 no-border">&nbsp;</th>
-            <td *ngFor="let product of visibleProducts" class="legacy-col-6 legacy-col-md-3 no-border">
-              <div class="product-image">
-                <a [routerLink]="product | ishProductRoute">
-                  <ish-product-image [product]="product" imageType="M"></ish-product-image>
-                </a>
-                <a
-                  class="btn-tool"
-                  [title]="'product.compare.remove.link' | translate"
-                  (click)="removeFromCompare(product.sku)"
-                >
-                  <fa-icon [icon]="['fas', 'trash-alt']"></fa-icon>
-                </a>
-              </div>
-
-              <div>
-                <a class="product-title" [routerLink]="product | ishProductRoute"> {{ product.name }} </a>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <th class="legacy-col-6 legacy-col-md-3 no-border">&nbsp;</th>
-            <td *ngFor="let product of visibleProducts" class="legacy-col-6 legacy-col-md-3 no-border">
-              <ish-product-id [product]="product"></ish-product-id>
-            </td>
-          </tr>
-          <tr>
-            <th class="legacy-col-6 legacy-col-md-3">&nbsp;</th>
-            <td *ngFor="let product of visibleProducts" class="legacy-col-6 legacy-col-md-3">
-              <ish-product-add-to-basket
-                [product]="product"
-                (productToBasket)="addToBasket(product.sku, product.minOrderQuantity)"
-              ></ish-product-add-to-basket>
+            <td *ngFor="let product of visibleProducts" class="legacy-col-6 legacy-col-md-3 no-border product-list">
+              <ish-product-item [productSku]="product.sku" [configuration]="configuration"></ish-product-item>
             </td>
           </tr>
 
