--- a/src/app/pages/product/retail-set-parts/retail-set-parts.component.html
+++ b/src/app/pages/product/retail-set-parts/retail-set-parts.component.html
@@ -38,11 +38,7 @@
   </div>
   <div class="row product-info">
     <div class="col align-self-start no-gutters">
-      <ish-product-add-to-basket
-        [product]="product"
-        translationKey="product.add_to_cart.retailset.link"
-        (productToBasket)="productToBasket.emit()"
-      ></ish-product-add-to-basket>
+      <ish-product-add-to-basket translationKey="product.add_to_cart.retailset.link"></ish-product-add-to-basket>
     </div>
   </div>
 </div>
