--- a/src/app/shared/components/product/product-add-to-basket/product-add-to-basket.component.html
+++ b/src/app/shared/components/product/product-add-to-basket/product-add-to-basket.component.html
@@ -1,27 +1,29 @@
-<div *ngIf="product?.inStock && product?.availability" class="add-to-cart">
-  <button
-    type="submit"
-    name="addProduct"
-    class="btn"
-    [ngClass]="class"
-    [class.btn-primary]="!displayIcon"
-    [disabled]="disabled || (displaySpinner$ | async)"
-    [attr.title]="translationKey | translate"
-    data-testing-id="addToCartButton"
-    (click)="addToBasket()"
-  >
-    <ng-container *ngIf="!(displaySpinner$ | async); else spinning">
-      <!-- Add to Cart button -->
-      <ng-container *ngIf="displayIcon; else defaultButton">
-        <fa-icon [icon]="['fas', 'shopping-cart']"></fa-icon>
-      </ng-container>
+<ng-container *ngIf="product$ | async as product">
+  <div *ngIf="product.inStock && product.availability" class="add-to-cart">
+    <button
+      type="submit"
+      name="addProduct"
+      class="btn"
+      [ngClass]="class"
+      [class.btn-primary]="!displayIcon"
+      [disabled]="(hasQuantityError$ | async) || (displaySpinner$ | async)"
+      [attr.title]="translationKey | translate"
+      data-testing-id="addToCartButton"
+      (click)="addToBasket()"
+    >
+      <ng-container *ngIf="!(displaySpinner$ | async); else spinning">
+        <!-- Add to Cart button -->
+        <ng-container *ngIf="displayIcon; else defaultButton">
+          <fa-icon [icon]="['fas', 'shopping-cart']"></fa-icon>
+        </ng-container>
 
-      <ng-template #defaultButton>{{ translationKey | translate }}</ng-template>
-    </ng-container>
-    <!-- button with spinning animation after Add to Cart -->
-    <ng-template #spinning>
-      <fa-icon [icon]="['fas', 'spinner']" [spin]="true" [ngClass]="{ 'pr-3': !displayIcon }"></fa-icon>
-      <span *ngIf="!displayIcon">{{ 'common.button.spinning.label' | translate }}</span>
-    </ng-template>
-  </button>
-</div>
+        <ng-template #defaultButton>{{ translationKey | translate }}</ng-template>
+      </ng-container>
+      <!-- button with spinning animation after Add to Cart -->
+      <ng-template #spinning>
+        <fa-icon [icon]="['fas', 'spinner']" [spin]="true" [ngClass]="{ 'pr-3': !displayIcon }"></fa-icon>
+        <span *ngIf="!displayIcon">{{ 'common.button.spinning.label' | translate }}</span>
+      </ng-template>
+    </button>
+  </div>
+</ng-container>
