--- a/src/app/shared/components/product/product-tile/product-tile.component.html
+++ b/src/app/shared/components/product/product-tile/product-tile.component.html
@@ -1,4 +1,4 @@
-<div class="product-tile" [attr.data-testing-sku]="product.sku">
+<div *ngIf="product$ | async as product" class="product-tile" [attr.data-testing-sku]="product.sku">
   <div class="product-image-container">
     <a [routerLink]="product | ishProductRoute: category">
       <ish-product-image [product]="product" imageType="M" class="product-image"></ish-product-image>
@@ -89,10 +89,8 @@
       ></ish-lazy-product-add-to-wishlist>
       <ish-product-add-to-basket
         *ngIf="configuration.displayAddToBasket && !isMasterProduct(product)"
-        [product]="product"
         displayType="icon"
         class="btn-link"
-        (productToBasket)="addToBasket()"
       ></ish-product-add-to-basket>
     </ng-template>
   </div>
