--- a/projects/requisition-management/src/app/components/approval-widget/approval-widget.component.html
+++ b/projects/requisition-management/src/app/components/approval-widget/approval-widget.component.html
@@ -1,17 +1,19 @@
-<ish-info-box heading="account.requisitions.widget.approvals_title" class="infobox-wrapper" cssClass="infobox-gradient">
+<ish-info-box heading="account.requisitions.widget.approvals_title" class="infobox-wrapper" cssClass="infobox-widget">
   <div class="loading-container">
     <div *ngIf="!(requisitionsLoading$ | async); else loading">
       <div class="row">
-        <div class="col">
-          <div class="infobox-count" data-testing-id="pending-counter">
-            {{ numPendingApprovals$ | async }}
+        <div class="col d-flex align-content-end">
+          <div>
+            <div class="infobox-count-large" data-testing-id="pending-counter">
+              {{ numPendingApprovals$ | async }}
+            </div>
+            {{ 'account.requisitions.widget.pending' | translate }}
           </div>
-          {{ 'account.requisitions.widget.pending' | translate }}
         </div>
         <div class="col d-flex align-items-end justify-content-end">
           <div class="text-right">
             {{ 'account.requisitions.widget.order_total' | translate }}
-            <div data-testing-id="pending-amount-sum">
+            <div class="font-weight-bold" data-testing-id="pending-amount-sum">
               {{ totalAmountApprovals$ | async | ishPrice }}
             </div>
           </div>
@@ -19,7 +21,7 @@
       </div>
 
       <div class="row">
-        <div class="col my-2">
+        <div class="col">
           <a routerLink="/account/requisitions/buyer">
             {{ 'account.requisitions.widget.view_all_approvals' | translate }}
           </a>
