--- a/projects/requisition-management/src/app/components/requisition-widget/requisition-widget.component.html
+++ b/projects/requisition-management/src/app/components/requisition-widget/requisition-widget.component.html
@@ -1,23 +1,23 @@
 <ish-info-box
   heading="account.requisitions.widget.requisitions_title"
   class="infobox-wrapper"
-  cssClass="infobox-gradient"
+  cssClass="infobox-widget"
 >
   <div class="loading-container">
     <div *ngIf="!(requisitionsLoading$ | async); else spinner">
       <div class="row">
         <div class="col">
-          <div class="infobox-count" data-testing-id="pending-counter">
+          <div class="infobox-count-large" data-testing-id="pending-counter">
             {{ numPendingRequisitions$ | async }}
           </div>
           {{ 'account.requisitions.widget.pending' | translate }}
         </div>
-        <div class="col d-flex align-items-end justify-content-end">
+        <div class="col d-flex align-items-end">
           <div class="text-right">
             <div>
               {{ 'account.requisitions.widget.order_total' | translate }}
             </div>
-            <div data-testing-id="pending-amount-sum">
+            <div class="font-weight-bold" data-testing-id="pending-amount-sum">
               {{ totalAmountRequisitons$ | async | ishPrice }}
             </div>
           </div>
@@ -25,7 +25,7 @@
       </div>
 
       <div class="row">
-        <div class="col my-2">
+        <div class="col">
           <a routerLink="/account/requisitions/buyer">
             {{ 'account.requisitions.widget.view_all_requisitions' | translate }}
           </a>
