--- a/src/app/pages/account-overview/account-overview/account-overview.component.html
+++ b/src/app/pages/account-overview/account-overview/account-overview.component.html
@@ -10,14 +10,14 @@
   <p>{{ 'account.overview.message.text' | translate }}</p>
 
   <div *ngIf="'services.OrderApprovalServiceDefinition.runnable' | ishServerSetting">
-    <div class="row d-flex">
+    <div class="row">
       <div class="col"><ish-lazy-budget-widget></ish-lazy-budget-widget></div>
     </div>
-    <div class="row d-flex">
+    <div class="row">
       <div class="col" *ngIf="'services.OrderApprovalServiceDefinition.runnable' | ishServerSetting">
         <ish-lazy-requisition-widget></ish-lazy-requisition-widget>
       </div>
-      <div class="col" *ngIf="'services.OrderApprovalServiceDefinition.runnable' | ishServerSetting">
+      <div class="col mx-n3" *ngIf="'services.OrderApprovalServiceDefinition.runnable' | ishServerSetting">
         <ish-lazy-approval-widget> </ish-lazy-approval-widget>
       </div>
       <!-- Quote Widget - displays different quote states if quoting is enabled -->
