--- a/projects/organization-management/src/app/components/budget-widget/budget-widget.component.html
+++ b/projects/organization-management/src/app/components/budget-widget/budget-widget.component.html
@@ -1,9 +1,9 @@
-<ish-info-box heading="account.requisitions.widget.budget_title" class="infobox-wrapper">
+<ish-info-box heading="account.requisitions.widget.budget_title" class="infobox-wrapper" cssClass="infobox-widget">
   <div class="loading-container">
     <div *ngIf="!(usersLoading$ | async); else loading">
       <div class="row">
-        <div class="col">
-          <ish-user-budget [budget]="requisitionUserBudgets$ | async"></ish-user-budget>
+        <div class="col-8">
+          <ish-user-budget barBackground="#fff" [budget]="requisitionUserBudgets$ | async"></ish-user-budget>
         </div>
       </div>
       <div class="row">
