--- a/projects/requisition-management/src/app/components/approval-widget/approval-widget.component.html
+++ b/projects/requisition-management/src/app/components/approval-widget/approval-widget.component.html
@@ -1,4 +1,8 @@
-<ish-info-box heading="account.requisitions.widget.approvals_title" class="infobox-wrapper" cssClass="infobox-widget">
+<ish-info-box
+  heading="account.requisitions.widget.approvals_title"
+  class="infobox-wrapper"
+  cssClass="infobox-color-widget"
+>
   <div class="loading-container">
     <div *ngIf="!(requisitionsLoading$ | async); else loading">
       <div class="row">
