--- a/projects/requisition-management/src/app/components/requisition-widget/requisition-widget.component.html
+++ b/projects/requisition-management/src/app/components/requisition-widget/requisition-widget.component.html
@@ -1,7 +1,7 @@
 <ish-info-box
   heading="account.requisitions.widget.requisitions_title"
   class="infobox-wrapper"
-  cssClass="infobox-widget"
+  cssClass="infobox-color-widget"
 >
   <div class="loading-container">
     <div *ngIf="!(requisitionsLoading$ | async); else spinner">
