--- a/src/app/extensions/quoting/shared/quote-widget/quote-widget.component.html
+++ b/src/app/extensions/quoting/shared/quote-widget/quote-widget.component.html
@@ -1,4 +1,4 @@
-<ish-info-box heading="account.quotes.widget.my_quotes.heading" class="infobox-wrapper" cssClass="infobox-widget">
+<ish-info-box heading="account.quotes.widget.my_quotes.heading" class="infobox-wrapper" cssClass="infobox-color-widget">
   <div class="loading-container">
     <div *ngIf="!(loading$ | async); else spinner">
       <div class="row no-gutters">
